--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -152,6 +152,9 @@ body {
   display: block;
 }
 
+.centered {
+  text-align: center;
+}
 
 .btn {
   font-size: 16px;
@@ -268,6 +271,13 @@ input:checked + .slider:before {-webkit-transform: translateX(26px);-ms-transfor
   width: 80px;
 }
 
+.resultnumber {
+  -webkit-appearance: none;
+  margin: 0;
+  -moz-appearance: textfield;
+  width: 100px;
+}
+
 .label {
  /* display: inline-block;
   height: 50px;
@@ -288,6 +298,45 @@ input:checked + .slider:before {-webkit-transform: translateX(26px);-ms-transfor
   in extra narrow spaces */
   grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--min)), 1fr));
 }
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 
 .w3-table-all{
   border-collapse:collapse;border-spacing:0;width:100%;display:table
