--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -2,8 +2,8 @@ html {
  height: 100%;
 }
 body {
-    color: #5d5d5d;
-    //color: #e6e6e6;
+    //color: #5d5d5d;
+    color: #d7d6d6;
     font-family: Helvetica, Arial, sans-serif;
     background-color: #333333;
     position: relative;
